...
                                                    <rect key="frame" x="8" y="8" width="359" height="184"/>
                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="dashboardCard">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dashboard" id="IyE-Gz-nhQ"/>
                    <connections>
                        <outlet property="tableView" destination="bDp-he-ZU7" id="EBv-kz-Ih2"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Calendar" id="5BK-fp-TRK"/>
                    <connections>
                        <outlet property="calendarView" destination="UFU-jL-KzJ" id="Mvl-WW-OMm"/>
...
        <scene sceneID="aBj-1t-W9O">
            <objects>
                <viewController storyboardIdentifier="DetailsViewController" title="Details" id="jnS-bG-Jjo" customClass="AppointmentDetailsViewController" customModule="Regease" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="F7b-iW-tnv"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Travolta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCl-qb-cYm">
                                <rect key="frame" x="16" y="20" width="343" height="24"/>
                                <constraints>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Consultation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F79-ih-m1A">
                                <rect key="frame" x="16" y="46" width="343" height="16"/>
                                <constraints>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jsD-MT-BMP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="Settings" id="6p4-j7-3vd">
                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
                    </tabBarItem>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Appearance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkD-JQ-ifG">
                                                    <rect key="frame" x="8" y="8" width="359" height="28"/>
                                                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4U-UF-Yrr">
                                                    <rect key="frame" x="8" y="8" width="359" height="28"/>
                                                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="17"/>
...
                                                </connections>
                                            </switch>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visible title and description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeX-ch-YKA">
                                                <rect key="frame" x="30" y="149" width="258" height="31"/>
                                                <constraints>
...
                                                        <color key="value" red="0.0" green="0.67417293789999999" blue="0.75885450840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Save"/>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Theme colors" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIv-fT-BJQ">
                                                <rect key="frame" x="34" y="188" width="308" height="21"/>
                                                <constraints>
...
                                </userDefinedRuntimeAttributes>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Working days" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RA2-ZS-DkY">
                                <rect key="frame" x="33" y="20" width="308" height="21"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Working hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i27-uH-aTG">
                                <rect key="frame" x="33" y="294" width="308" height="21"/>
                                <constraints>
...
